feat(api): update script to regen specs and regen them
