# src/libs/api/endpoints/tournament/index.ts
@@ -1,0 +1,2 @@
+export * from './tournament.ts';
+export * from './tournament.msw.ts';
